--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>2025 Certification Prep</title>
   </head>
   <body>
-    <h1>\</h1>
-    <h2>I am back on the honor roll after 1 year.</h2>
+    <h1>Srutha Barua's Certification Exam Prep</h1>
+    <h2>Domain 1 - HTML Fundamentals</h2>
   </body>
 </html>
