--- a/Domain 1/MusicStore1/11a-scripts.html
+++ b/Domain 1/MusicStore1/11a-scripts.html
@@ -1,10 +1,17 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<head>
-    <title>Script Support</title>       
-</head>
-<body>
-    Script test
-    
-</body>
+  <head>
+    <title>Script and Noscript Test</title>
+  </head>
+  <body>
+    <h1>Script Test</h1>
+
+    <script type="text/javascript">
+      alert("This browser supports JavaScript!");
+    </script>
+
+    <noscript>
+      <p>This browser does not support JavaScript.</p>
+    </noscript>
+  </body>
 </html>
