--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <body>
     <h1>Srutha Barua's Certification Exam Prep</h1>
     <h2>Domain 1 - HTML Fundamentals</h2>
-    <a href="Domain 1/MusicStore1">HTML Fundamentals Page 10</a>
+    <a href="Domain 1/MusicStore1/11a-scripts.html">HTML Fundamentals Page 10</a>
   </body>
 </html>
