--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <body>
     <h1>Srutha Barua's Certification Exam Prep</h1>
     <h2>Domain 1 - HTML Fundamentals</h2>
-    <a href="Domain 1/MusicStore1/11a-scripts.html">HTML Fundamentals Page 10</a>
+    <a href="Domain 1/MusicStore1/11a-scripts.html">HTML Fundamentals Page 10 Part 1</a>
+    <br>
+    <a href="Domain 1/MusicStore1/11c-scripts.html">HTML Fundamentals Page 10 Part 2</a>
   </body>
 </html>
