--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <a href="Domain 1/MusicStore1/11a-scripts.html">HTML Fundamentals Page 10 Part 1</a>
     <br>
     <a href="Domain 1/MusicStore1/11c-scripts.html">HTML Fundamentals Page 10 Part 2</a>
+    <br>
+    <h1>Domain 2 - CSS Fundamentals</h1>
+    <a href="
   </body>
 </html>
