--- a/Domain 1/MusicStore1/index.html
+++ b/Domain 1/MusicStore1/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>THE Music Store</title>
+</head>
+<body>
+    <p>Welcome to &lt;&lt;THE Music Store&gt;&gt;</p>
+    <!-- Main text goes here -->
+</body>
+</html>
 
