--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <br>
     <a href="Domain 1/MusicStore1/11c-scripts.html">HTML Fundamentals Page 10 Part 2</a>
     <br>
+    <a href="Domain 1/MusicStore1/index.html">Music Store</a>
+    <br>
     <h1>Domain 2 - CSS Fundamentals</h1>
     <a href="
   </body>
