--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
     <a href="Domain 1/MusicStore1/index.html">Music Store</a>
     <br>
     <h1>Domain 2 - CSS Fundamentals</h1>
-    
+    <br>
+    <a href="Domain 2/MusicStore2/21a-index.html">Creating Style Sheets Exercise - Pg. 13</a>
+    <br>
+    <a href="Domain 2/MusicStore2/21b-index.html">Style Sheet Precedence - Pg. 14</a>
+    <br>
+    <a href="Domain 2/MusicStore2/22a-index.html">Valid Syntax for Rule Sets - Pg. 15</a>
+    <br>
+    <a href="Domain 2/MusicStore2/22b-books.html">Apply Classes - Pg. 16</a>
+    <br>
+    <a href="Domain 2/MusicStore2/22b2-spotlight.html">Apply IDs - Pg. 17</a>
+    <br>
+    <a href="Domain 2/MusicStore2/22b3-books.html">Apply Psuedo Classes - Pg. 18</a>
+    <br>
+    <h1>Domain 3 - Document Structure Using HTML</h1>
   </body>
 </html>
